--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -265,6 +265,7 @@
     border: 0px;
     border-radius: 5px;
     height: 33px;
+    width: 200px;
     box-sizing: border-box;
     color: white;
     background-color: #106DB6;
