--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -17,42 +17,34 @@
 </div>
 
 <!--usb token v1 có ảnh đóng dấu-->
-<div id="export-html-image" style="position: relative">
-    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-            <div style="text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
-            <div style="text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-            <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+<div class="signature-container" id="export-html-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
+    <div style="position: relative;">
+        <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
+    </div>
+    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+        <div style="width: 165px;">
+            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
         </div>
     </div>
 </div>
+
 
 
 <!--usb token v2 có ảnh đóng dấu-->
-<!-- <div id="export-html2-image" style="position: relative;">
-    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;background-color: white">
-        <div style="color: #4FC123; background-size: 40px 40px">
+<div class="signature-container" id="export-html2-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px; background-color: white;">
+    <div style="position: relative;">
+        <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
+    </div>
+    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+        <div style="width: 165px;">
             <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
             <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
-        </div>
-    </div>
-</div> -->
-
-<div id="export-html2-image" style="position: relative">
-    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2; background-color: white;">
-        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-            <div style="text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
-            <div style="text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-            <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
         </div>
     </div>
 </div>
-
-
 
 
 
@@ -77,28 +69,18 @@
 
 
 <!--Hsm có ảnh đóng dấu-->
-<!-- <div id="export-html-hsm1-image" style="position: relative;">
-    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div style="color: #4FC123; background-size: 40px 40px">
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
-        </div>
+<div class="signature-container" id="export-html-hsm1-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
+    <div style="position: relative;">
+        <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
     </div>
-</div> -->
-
-<div id="export-html-hsm1-image" style="position: relative">
-    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10; filter: blur(1px)" [src]="srcMark" alt="logo">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+        <div style="width: 165px;">
+            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</div>
+            <div style="z-index: 2;text-align: left;">{{'tax_code' | translate}}: {{cardId}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
         </div>
     </div>
 </div>
-
 
 <div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
@@ -107,31 +89,6 @@
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
-    </div>
-</div>
-
-<!--Pki có ảnh đóng dấu-->
-<!-- <div id="export-html-pki-image" style="position: relative; background-color: white;">
-    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div style="color: #4FC123; background-size: 40px 40px">
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
-        </div>
-    </div>
-</div> -->
-
-<div id="export-html-hsm1-image" style="position: relative; background-color: white;">
-    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
-            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
-            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
-        </div>
     </div>
 </div>
 
