--- a/src/app/main/role/add-role/add-role.component.html
+++ b/src/app/main/role/add-role/add-role.component.html
@@ -52,7 +52,9 @@
                 <div class="label text-color">{{'role.permission' | translate}} <span class="required-title">*</span></div>
                 <div>
                     <p-listbox [options]="groupedRole" [group]="true" formControlName="selectedRole" [metaKeySelection]="false"
-                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}">
+                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}"
+                        (onChange)="onChange($event)"
+                        >
                         <ng-template let-group pTemplate="group">
                             <div class="p-d-flex p-ai-center">
                                 <span>{{group.label | translate}}</span>
