mail mbf không sử dụng được tính năng

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -103,7 +103,7 @@
               </div>
             </a>
           
-            <button ngbDropdownItem class="drop" (click)="resetPassword()">
+            <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop" (click)="resetPassword()">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
                   <div class="db_password"></div>
