--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -20,8 +20,13 @@
 <div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
   <span *ngIf="getSpecifiedHandle()" class="font-style" id="input-text">{{getText(sign)}}</span>
 
-  <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
-    [(ngModel)]="sign.value" type="text" (click)="reverseInput($event)" (blur)="changeInput($event)" (ngxInputSearch)="doTheSearch($event,'text')">
+  <!-- <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
+    [(ngModel)]="sign.value" type="text" (click)="reverseInput($event)" (blur)="changeInput($event)" (ngxInputSearch)="doTheSearch($event,'text')"> -->
+
+    <div *ngIf="sign.sign_unit == 'text' && sign.is_have_text">
+      <textarea id="input-text-value" placeholder="Nhập nội dung Text.." [(ngModel)]="sign.value"
+        (click)="reverseInput($event)" (blur)="changeInput($event)" (ngxInputSearch)="doTheSearch($event,'text')"></textarea>
+    </div>
 
   <input *ngIf="getNotSpecifiedYetHandle() && this.contractNo" id="input-number-value"
     (focusout)="focusOutFunction()" [(ngModel)]="this.contractNo" placeholder="Nhập số hợp đồng.." type="text"
