--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -17,9 +17,30 @@
 // .font-style {
 //   font-size: 11px !important;
 // }
+textarea {
+  margin: 0;
+  overflow-y: hidden;
+  resize: none;
+  position: relative;
+}
+
+textarea::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 16px;
+  height: 16px;
+  background-color: #ddd;
+  border: 1px solid #999;
+  border-radius: 3px;
+  pointer-events: all;
+  cursor: nwse-resize;
+}
 
 #input-text-value, #input-number-value {
   width: 100%;
+  height: 100%;
   background-color: rgb(235, 248, 255);
   border: none;
   outline: none;
