--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -38,11 +38,11 @@
         <span class="require_star">*</span>
       </div>
       <div style="width: 100%; display: flex; justify-content: space-between;">
-        <div class="input-data" style="width: 80%;">
-          <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
+        <div class="input-data" style="width: 100%;">
+          <input style="width: 100%" autocomplete="off" type="text" formControlName="phone" class="input-text">
         </div>
 
-        <div class="input-data" style="width: 13%;">
+        <!-- <div class="input-data" style="width: 13%;">
           <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown" style="margin-left: 6px;" [(ngModel)]="locale">
             <div *ngIf="this.locale =='vi'">
               <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
@@ -65,7 +65,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -74,11 +74,11 @@
         <span *ngIf="isReqPhone" class="require_star">*</span>
       </div>
       <div style="width: 100%; display: flex; justify-content: space-between;">
-        <div class="input-data" style="width: 80%;">
-          <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
+        <div class="input-data" style="width: 100%;">
+          <input style="width: 100%" autocomplete="off" type="text" formControlName="phone" class="input-text">
         </div>
 
-        <div class="input-data" style="width: 13%;">
+        <!-- <div class="input-data" style="width: 13%;">
           <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown" style="margin-left: 6px;" [(ngModel)]="this.locale">
             <div *ngIf="this.locale =='vi'">
               <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
