--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -71,7 +71,7 @@
 <div class="label-header">{{'sign.information' | translate}}</div>
 <div class="content-body">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="label-header">
                 {{'sign.file-image' | translate}}
             </div>
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="label-header">
                 {{'sign.file-image.mark' | translate}}
             </div>
@@ -113,9 +113,9 @@
                     <img class="hidden_img" (click)="addFileAttach('mark')" src="assets/img/img-icon.svg" width="15" height="15" />
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             <form [formGroup]="addKpiForm">
                 <div class="label-header">
                     <div class="row" style="padding: 0 10px;">
@@ -148,7 +148,7 @@
             </form>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             <form [formGroup]="addHsmForm">
                 <div class="label-header">
                     <div class="row" style="padding: 0 10px;">
