rollback để fix lỗi ký hsm trùng ô text số hợp đồng

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -22,29 +22,29 @@
     <span [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
 
-  <div id="text-sign" class="skeleton-sign-value" (click)="doEditText()" *ngIf="!checkShowEdit && sign.valueSign">
+  <div class="skeleton-sign-value" (click)="doEditText()" *ngIf="!checkShowEdit && sign.valueSign">
     <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
-  <div  class="skeleton-sign" *ngIf="checkShowEdit">
+  <div *ngIf="checkShowEdit">
     <input type="text" class="input-edit-text" [(ngModel)]="sign.valueSign" (blur)="doneEditTextSign()" #inputEditText>
   </div>
 </div>
 
 <!--Số hợp đồng-->
 <div class="text-sign" *ngIf="sign.sign_unit == 'so_tai_lieu'">
-  <div id="contract-no-sign" class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (!sign.valueSign && !sign.value && !contractNoValueSign) && !view">
+  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (!sign.valueSign && !sign.value && !contractNoValueSign) && !view">
     <span id="input-text" *ngIf="!sign.valueSign">{{getText(sign)}}</span>
   </div>
 
-  <div id="contract-no-sign" class="skeleton-sign" *ngIf="view">
+  <div class="skeleton-sign" *ngIf="view">
     <span id="input-text" *ngIf="!sign.valueSign">{{getText(sign)}}</span>
   </div>
 
-  <div id="contract-no-sign" class="skeleton-sign-value" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (this.contractNoValueSign || sign.value || sign.valueSign) && !view">
+  <div class="skeleton-sign-value" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (this.contractNoValueSign || sign.value || sign.valueSign) && !view">
     <span class="input-text">{{getText(sign)}}</span>
   </div>
 
-  <div id="contract-no-sign" class="skeleton-sign" *ngIf="contractNoValue || count > 0 && !view">
+  <div class="skeleton-sign" *ngIf="contractNoValue || count > 0 && !view">
     <input (click)="reverseInput($event)" [ngStyle]="getStyle(sign)" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign, $event)" #inputEditContractNo>
   </div>
 </div> 
