--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -117,9 +117,9 @@
       <div class="skeleton-sign position-absolute opacity-0">
         <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI" [srcMark]="srcMark"></app-display-digital-signature>
       </div>
-      <!-- <div class="skeleton-sign position-absolute opacity-0">
+      <div class="skeleton-sign position-absolute opacity-0">
         <app-text-signature-image [font]="font" [font_size]="font_size" [datas]="datas" [textSign]="textSign" [width]="width"></app-text-signature-image>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
